      (Closes: #834797)
  * checks/cruft.desc:
    + [JW] Fix typo.
  * checks/duplicate-files.desc:
    + [JW] Fix typo.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
    + [JW] Escape dots in some regexps.
  * checks/files.desc:
    + [JW] Fix typos.
  * checks/java.desc:
    + [JW] Fix typo.
  * checks/patch-systems.desc:
    + [JW] Fix formatting of some filenames.
  * checks/phppear.desc:
    + [JW] Fix typo.
  * checks/rules.desc:
    + [JW] Fix typo.
  * checks/shared-libs.desc:
    + [JW] Fix typos.

  * data/spelling/corrections*:
    + [JW] Add more corrections.

  * debian/control:
    + [JW] Drop now-unused libdata-alias-perl from (Build-)Depends.

 -- Niels Thykier <niels@thykier.net>  Sat, 13 Aug 2016 20:07:19 +0000

lintian (2.5.46) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - systemd-service-file-missing-install-key
      - typo-in-debhelper-override-target
    + Removed:
      - package-depends-on-lower-priority-package

  * checks/cruft.pm:
    + [NT] Ignore mentions of /usr/lib/perl5 in patches as they might
      be a way of fixing said mentions.  Thanks to Robert Luberda
      for reporting the bug.  (Closes: #802964)
  * checks/debhelper.{desc,pm}:
    + [JW] Apply patch from Chris Lamb to check for common typos in
      debian/rules target names.  (Closes: #832096)
    + [JW, NT] Add some more (indirect) "dh" build-systems.
      (Closes: #828773)
  * checks/files.desc:
    + [JW] Fix typos.
  * checks/group-checks.{desc,pm}:
    + [NT] Drop "lower priorities" check as the general consensus seems to
      be that priorities changes are mostly busy work.  Thanks to Dominic
      Hargreaves for the report.  (Closes: #823326)
  * checks/infofiles.desc:
    + [JW] Fix typo.
  * checks/java.pm:
    + [JW] Don't emit javalib-but-no-public-jars for transitional packages.
      Thanks to Jeremy Bicha for the bug report.  (Closes: #829047)
  * checks/manpages.desc:
    + [JW] Fix typos.
  * checks/phppear.desc: